--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Inclusão Escolar: educação para todos. </title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inclusão Escolar: educação para todos. </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-<h1>Caminhos para a inclusão escolar.</h1>
-<p>creditamos em uma educação que acolhe, respeita e valoriza as diferenças, promovendo o aprendizado de todos os estudantes, sem exceção</p>
+    <h1>Caminhos para a inclusão escolar.</h1>
+    <p> Um caminho para educação de qualidade para todos.</p>
 </header>
+<section>
+<p> A inclusão escolar é um compromisso com a construção de uma sociedade mais justa, empática e igualitária. Significa garantir que todas as crianças e adolescentes, independentemente de suas características físicas, cognitivas, sociais, culturais ou emocionais, tenham acesso à educação de qualidade, em um ambiente escolar acolhedor e adaptado às suas necessidades.</p>
+<p> Mais do que integrar alunos com deficiência ou necessidades educacionais específicas ao ambiente escolar, a inclusão escolar propõe uma transformação na forma como a escola ensina, aprende e se organiza. Trata-se de repensar práticas pedagógicas, promover a formação contínua de professores, eliminar barreiras físicas e atitudinais e valorizar a diversidade como parte fundamental do processo educativo.</p>
+<p> Aqui, acreditamos que toda criança tem o direito de aprender e participar plenamente da vida escolar. Por isso, buscamos criar um espaço onde cada aluno se sinta respeitado, valorizado e incentivado a desenvolver seu potencial máximo. Trabalhamos com:
+Adaptações curriculares e metodológicas para atender às diferentes formas de aprendizagem.
+Acessibilidade física e comunicacional, garantindo que todos possam circular e se expressar com liberdade.
+Formação contínua da equipe pedagógica para lidar com a diversidade na sala de aula.
+Parcerias com famílias, profissionais da saúde e da assistência social, fortalecendo uma rede de apoio integrada.</p>
+
+</section>
 </body>
 </html>
