--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ Adaptações curriculares e metodológicas para atender às diferentes formas de
 Acessibilidade física e comunicacional, garantindo que todos possam circular e se expressar com liberdade.
 Formação contínua da equipe pedagógica para lidar com a diversidade na sala de aula.
 Parcerias com famílias, profissionais da saúde e da assistência social, fortalecendo uma rede de apoio integrada.</p>
-
 </section>
+<footer>
+    <p>&copy;</p>
+</footer>
 </body>
 </html>
