--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Formação contínua da equipe pedagógica para lidar com a diversidade na sala 
 Parcerias com famílias, profissionais da saúde e da assistência social, fortalecendo uma rede de apoio integrada.</p>
 </section>
 <footer>
-    <p>&copy;</p>
+    <p>&copy todos os direitos reservados;</p>
 </footer>
 </body>
 </html>
